--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,27 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  set-up-workspace:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: cimg/base:stable  
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  build-docker-image:
+    docker:
+      - image: cimg/base:stable  
+    steps:
+      - setup_remote_docker
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
+            echo "${G_CLOUD_SERVICE_KEY}" || docker login -u _json_key --password-stdin https://us.gcr.io < -
+            docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
+
 workflows:
-  say-hello-workflow:
+  deploy:
     jobs:
-      - say-hello
+      - set-up-workspace
+      - build-docker-image:
+          requires:
+            - set-up-workspace
