--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - run:
           name: Build Docker Image
           command: |
+            cd profile
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
             echo "${G_CLOUD_SERVICE_KEY}" || docker login -u _json_key --password-stdin https://us.gcr.io < -
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
