--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,22 @@ jobs:
       - image: cimg/base:stable  
     steps:
       - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 
   build-docker-image:
     docker:
       - image: cimg/base:stable  
     steps:
+      - attach_workspace:
+          at: /tmp/workspace
       - setup_remote_docker
       - run:
           name: Build Docker Image
           command: |
-            cd profile
+            cd /tmp/workspace/profile
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
             echo "${G_CLOUD_SERVICE_KEY}" || docker login -u _json_key --password-stdin https://us.gcr.io < -
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
