--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ jobs:
           command: |
             cd /tmp/workspace/profile
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
-            echo "${G_CLOUD_SERVICE_KEY}" || docker login -u _json_key --password-stdin https://us.gcr.io < -
+            echo "${G_CLOUD_SERVICE_KEY}" > account.json && docker login -u _json_key --password-stdin https://us.gcr.io < account.json
+            cat account.json
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
 
 workflows:
