--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,17 +21,9 @@ jobs:
           name: Build Docker Image
           command: |
             cd /tmp/workspace/profile
-            VERSION=2.1.5
-            OS=amd64
-            curl -fsSL "https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-423.0.0-linux-arm.tar.gz" \
-            | tar xz gcloud \
-            && chmod +x gcloud && sudo mv gcloud /usr/bin/
-
             echo "${G_CLOUD_SERVICE_KEY}" > serviceaccount.json
-            gcloud auth activate-service-account circleci@altschool-371614.iam.gserviceaccount.com --key-file=serviceaccount.json
             GOOGLE_APPLICATION_CREDENTIALS = serviceaccount.json
-            gcloud auth print-access-token --project altschool-371614 | docker login -u oauth2accesstoken \                                                    ─╯
-            --password-stdin https://us.gcr.io
+            docker login -u _json_key --password-stdin https://gcr.io < serviceaccount.json
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
 
