--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ jobs:
           command: |
             cd /tmp/workspace/profile
             echo "${G_CLOUD_SERVICE_KEY}" > serviceaccount.json
-            docker login -u _json_key --password-stdin https://gcr.io < serviceaccount.json
+            cat serviceaccount.json
+            docker login -u _json_key --password-stdin https://us.gcr.io < serviceaccount.json
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
 
