setup helm deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,23 @@ jobs:
             docker login -u _json_key --password-stdin https://us.gcr.io < serviceaccount.json
             docker build -t us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1 .
             docker push us.gcr.io/altschool-371614/profile:$CIRCLE_SHA1
+  
+  deploy-to-kubernetes:
+    docker:
+      - image: kiwigrid/gcloud-kubectl-helm
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Deploy to Kubernetes
+          command: |
+            echo "${G_CLOUD_SERVICE_KEY}" > serviceaccount.json
+            cat serviceaccount.json
+            gcloud auth activate-service-account --key-file serviceaccount.json
+            gcloud config set project altschool-371614
+            gcloud container clusters get-credentials altschool-371614-gke --zone us-central1-a --project altschool-371614
+            cd /tmp/workspace/helm/profile
+            helm upgrade --install profile -n profile .  --create-namespace --set image.tag=$CIRCLE_SHA1
 
 workflows:
   deploy:
@@ -34,3 +51,6 @@ workflows:
       - build-docker-image:
           requires:
             - set-up-workspace
+      - deploy-to-kubernetes:
+          requires:
+            - build-docker-image
