--- a/helm/profile/templates/ingress.yaml
+++ b/helm/profile/templates/ingress.yaml
@@ -11,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)  
     nginx.ingress.kubernetes.io/redirect-replacement: /$1  
     nginx.ingress.kubernetes.io/app-root: "index.html"
+    cert-manager.io/issuer: "letsencrypt-prod"
 spec:
   rules:
   - host: "k317.live"
