--- a/helm/cert-manager/clusterissuer.yaml
+++ b/helm/cert-manager/clusterissuer.yaml
@@ -17,3 +17,20 @@ spec:
     - http01:
         ingress:
           class: nginx
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: acme-crt
+spec:
+  secretName: tls-cert
+  dnsNames:
+  - grafana.k317.live
+  - k317.live
+  issuerRef:
+    name: letsencrypt-cluster-issuer
+    # We can reference ClusterIssuers by changing the kind here.
+    # The default value is Issuer (i.e. a locally namespaced Issuer)
+    kind: Issuer
+    group: cert-manager.io
