--- a/helm/sockshop/values.yaml
+++ b/helm/sockshop/values.yaml
@@ -1,82 +1,258 @@
-# Default values for sockshop.
+# Default values for sock-shop.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+global:
+    registry: ''
 
-replicaCount: 1
+java:
+    options: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
 
-image:
-  repository: weaveworksdemos/edge-router
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.1.1"
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
+istio:
+    enabled: false
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    annotations:
+      nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)  
+      nginx.ingress.kubernetes.io/redirect-replacement: /$1
+      cert-manager.io/issuer: "letsencrypt-prod"
+      kubernetes.io/ingress.class: nginx
+    labels: {}
+    host: "sockshop.k317.live"
+    tlsSecretName: ''
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+cartsdb:
+    image:
+        repo: mongo
+        tag: 4.4.0
+    resources:
+        requests:
+            cpu: 500m
+            memory: 512Mi
+        limits:
+            cpu: 500m
+            memory: 512Mi
+    persistentVolume:
+        storageClass: ''
+        size: 512Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+carts:
+    image:
+        repo: weaveworksdemos/carts
+        tag: 0.4.8
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 300m
+            memory: 2000Mi
+        requests:
+            cpu: 300m
+            memory: 2000Mi
 
-nodeSelector: {}
+cataloguedb:
+    image:
+        repo: weaveworksdemos/catalogue-db
+        tag: 0.3.0
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
 
-tolerations: []
+catalogue:
+    image:
+        repo: weaveworksdemos/catalogue
+        tag: 0.3.5
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 100m
+            memory: 100Mi
+        requests:
+            cpu: 100m
+            memory: 100Mi
 
-affinity: {}
+frontend:
+    replicas: 1
+    image:
+        repo: weaveworksdemos/front-end
+        tag: 0.3.12
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+
+loadtest:
+    replicas: 2
+    enabled: false
+    image:
+        repo: weaveworksdemos/load-test
+        tag: 0.1.1
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+
+ordersdb:
+    image:
+        repo: mongo
+        tag: 4.4.0
+    resources:
+        requests:
+            cpu: 500m
+            memory: 512Mi
+        limits:
+            cpu: 500m
+            memory: 512Mi
+    persistentVolume:
+        storageClass: ''
+        size: 512Mi
+
+orders:
+    image:
+        repo: weaveworksdemos/orders
+        tag: 0.4.7
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 500m
+            memory: 2000Mi
+        requests:
+            cpu: 200m
+            memory: 2000Mi
+
+payment:
+    image:
+        repo: weaveworksdemos/payment
+        tag: 0.4.3
+    declinePaymentsOverAmount: 200
+    containerPort: 8080
+    resources:
+        limits:
+            cpu: 100m
+            memory: 100Mi
+        requests:
+            cpu: 100m
+            memory: 100Mi
+
+queuemaster:
+    image:
+        repo: weaveworksdemos/queue-master
+        tag: 0.3.1
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 300m
+            memory: 1000Mi
+
+rabbitmq:
+    image:
+        repo: rabbitmq
+        tag: 3.6.8
+    resources:
+        requests:
+            memory: 256Mi
+            cpu: 350m
+        limits:
+            memory: 512Mi
+            cpu: 1
+
+sessiondb:
+    image:
+        repo: redis
+        tag: alpine
+    resources:
+        requests:
+            memory: 256Mi
+            cpu: 250m
+        limits:
+            memory: 256Mi
+            cpu: 250m
+    persistentVolume:
+        storageClass: ''
+        size: 512Mi
+
+shipping:
+    image:
+        repo: weaveworksdemos/shipping
+        tag: 0.4.8
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 300m
+            memory: 2000Mi
+        requests:
+            cpu: 300m
+            memory: 2000Mi
+
+userdb:
+    image:
+        repo: weaveworksdemos/user-db
+        tag: 0.4.0
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+
+user:
+    image:
+        repo: weaveworksdemos/user
+        tag: 0.4.7
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 400Mi
+
+zipkincron:
+    image:
+        repo: openzipkin/zipkin-dependencies
+        tag: 1.4.0
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+
+zipkin:
+    image:
+        repo: openzipkin/zipkin
+        tag: 2.21
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+    enabled:  false
+    url: zipkin.zipkin.svc.cluster.local
+
+zipkinmysql:
+    image:
+        repo: openzipkin/zipkin-mysql
+        tag: 1.20.0
+    resources:
+        requests:
+            memory: 256Mi
+            cpu: 250m
+        limits:
+            memory: 768Mi
+            cpu: 1
